Dashboard and some issue fixed

--- a/app/src/main/res/layout/pincode_fragment.xml
+++ b/app/src/main/res/layout/pincode_fragment.xml
@@ -79,10 +79,11 @@
                         android:id="@+id/editTextUsername"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginStart="50dp"
                         android:afterTextChanged="@{pinCodeViewModel.afterPinTextChanged}"
                         android:hint="Enter pin"
-                        android:layout_marginStart="50dp"
                         android:inputType="number"
+                        android:maxLength="8"
                         android:onTextChanged="@{pinCodeViewModel.onPinTextChanged}"
                         android:text="@={pinCodeViewModel.pin}"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -145,9 +146,11 @@
                         android:id="@+id/editTextActivationCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Confirm pin"
                         android:layout_marginStart="50dp"
+                        android:hint="Confirm pin"
                         android:inputType="number"
+                        android:maxLength="8"
+                        android:onTextChanged="@{pinCodeViewModel.onConfirmPinTextChanged}"
                         android:password="true"
                         android:text="@={pinCodeViewModel.confirmPin}"
                         app:layout_constraintBottom_toBottomOf="parent"
