--- a/app/src/main/res/layout/activation_fragment.xml
+++ b/app/src/main/res/layout/activation_fragment.xml
@@ -128,6 +128,7 @@
                         android:layout_marginStart="50dp"
                         android:hint="Activation code"
                         android:password="true"
+                        android:inputType="numberPassword"
                         android:text="@={activationViewModel.activationCode}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
