--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,8 +70,8 @@
                 android:id="@+id/frameLayoutLoginFragmentContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
-                android:visibility="@{initViewModel.fieldVisibility?view.VISIBLE:view.GONE}">
+                android:layout_marginTop="50dp">
+
 
                 <!-- Fragment container -->
 
