--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
                     android:padding="10dp">
 
                     <ImageView
+                        android:id="@+id/imageViewMenu"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/icon_menu"
@@ -98,9 +99,9 @@
             <ProgressBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_gravity="bottom"
                 android:layout_marginBottom="30dp"
                 android:visibility="@{initViewModel.progressBarVisibility?view.VISIBLE:view.GONE}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -110,12 +111,13 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="30dp"
                 android:background="@color/colorPrimary"
+                android:backgroundTint="@color/colorPrimary"
                 android:elevation="20dp"
-                android:layout_gravity="bottom"
                 android:onClick="@{(v)->initViewModel.onStartClick(v)}"
                 android:text="@string/start"
                 android:textColor="@color/white"
