--- a/app/src/main/res/layout/change_pin_fragment.xml
+++ b/app/src/main/res/layout/change_pin_fragment.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="pinCodeViewModel"
-            type="com.example.kobilapp.viewModel.PinCodeViewModel" />
+            name="changePinViewModel"
+            type="com.example.kobilapp.viewModel.ChangePinViewModel" />
 
         <variable
             name="view"
@@ -17,22 +17,68 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".fragment.ActivationFragment">
 
-        <View
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="50dp"
             android:background="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/linearLayoutMenu"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:onClick="@{(v)->changePinViewModel.onBackPressed(v)}"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/imageViewMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/icon_back"
+                    android:backgroundTint="@color/white" />
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:backgroundTint="@color/white"
+                android:text="@string/bank"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:drawableStartCompat="@drawable/icon_bank"
+                app:drawableTint="@color/white" />
+
+        </RelativeLayout>
+
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+            app:layout_constraintVertical_bias="0.0" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
             android:elevation="30dp"
             app:cardBackgroundColor="@color/white"
@@ -44,13 +90,66 @@
             app:circularflow_defaultRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="30dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:padding="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/icon_pin"
+                            android:backgroundTint="@color/black" />
+                    </LinearLayout>
+
+                    <EditText
+                        android:id="@+id/editTextCurrentPin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="50dp"
+                        android:hint="Current PIN"
+                        android:inputType="number"
+                        android:maxLength="8"
+                        android:password="true"
+                        android:text="@={changePinViewModel.currentPin}"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/light_black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <TextView
+                        android:id="@+id/textViewCurrentPinError"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="55dp"
+                        android:text="@{changePinViewModel.currentPinError}"
+                        android:textColor="@color/black"
+                        android:textSize="10sp"
+                        app:layout_constraintTop_toBottomOf="@id/editTextCurrentPin"
+                        android:visibility="@{changePinViewModel.currentPinErrorVisibility ?view.VISIBLE:view.GONE}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        tools:layout_editor_absoluteX="10dp" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -80,14 +179,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="50dp"
-                        android:afterTextChanged="@{pinCodeViewModel.afterPinTextChanged}"
-                        android:hint="Enter pin"
-                        android:textColorHint="@color/light_black"
-                        android:textColor="@color/black"
-                        android:inputType="number"
+                        android:hint="New PIN"
+                        android:inputType="numberPassword"
                         android:maxLength="8"
-                        android:onTextChanged="@{pinCodeViewModel.onPinTextChanged}"
-                        android:text="@={pinCodeViewModel.pin}"
+                        android:onTextChanged="@{changePinViewModel.onPinTextChanged}"
+                        android:text="@={changePinViewModel.newPin}"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/light_black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -98,10 +196,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="55dp"
-                        android:text="@{pinCodeViewModel.pinError1}"
+                        android:text="@{changePinViewModel.newPinError1}"
                         android:textColor="@color/black"
                         android:textSize="10sp"
-                        android:visibility="@{pinCodeViewModel.pinError1Visibility ?view.VISIBLE:view.GONE}"
+                        android:visibility="@{changePinViewModel.newPinError1Visibility ?view.VISIBLE:view.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
@@ -112,10 +210,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="55dp"
-                        android:text="@{pinCodeViewModel.pinError2}"
+                        android:text="@{changePinViewModel.newPinError2}"
                         android:textColor="@color/black"
                         android:textSize="10sp"
-                        android:visibility="@{pinCodeViewModel.pinError2Visibility ?view.VISIBLE:view.GONE}"
+                        android:visibility="@{changePinViewModel.newPinError2Visibility ?view.VISIBLE:view.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textViewActivationCode1"
                         tools:layout_editor_absoluteX="10dp" />
@@ -151,12 +249,12 @@
                         android:layout_marginStart="50dp"
                         android:hint="Confirm pin"
                         android:inputType="number"
-                        android:textColorHint="@color/light_black"
-                        android:textColor="@color/black"
                         android:maxLength="8"
-                        android:onTextChanged="@{pinCodeViewModel.onConfirmPinTextChanged}"
+                        android:onTextChanged="@{changePinViewModel.onConfirmPinTextChanged}"
                         android:password="true"
-                        android:text="@={pinCodeViewModel.confirmPin}"
+                        android:text="@={changePinViewModel.newConfirmPin}"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/light_black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -167,10 +265,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="55dp"
-                        android:text="@{pinCodeViewModel.confirmPinError}"
-                        android:textColor="@color/red"
+                        android:text="@{changePinViewModel.newConfirmPinError}"
+                        android:textColor="@color/black"
                         android:textSize="10sp"
-                        android:visibility="@{pinCodeViewModel.confirmPinErrorVisibility ?view.VISIBLE:view.GONE}"
+                        android:visibility="@{changePinViewModel.newConfirmPinErrorVisibility ?view.VISIBLE:view.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/editTextActivationCode"
                         tools:layout_editor_absoluteX="10dp" />
@@ -184,9 +282,11 @@
             android:layout_marginStart="14dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="14dp"
+            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:elevation="20dp"
-            android:onClick="@{(v)->pinCodeViewModel.onSetPinClick(v)}"
-            android:text="Activate"
+            android:onClick="@{(v)->changePinViewModel.onChangePinClick(v)}"
+            android:text="Change pin"
             app:cardPreventCornerOverlap="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
